2018-08-31  Mark Lam  <mark.lam@apple.com>

        Fix exception check accounting in JSDataView::defineOwnProperty().
        https://bugs.webkit.org/show_bug.cgi?id=189186
        <rdar://problem/39786049>

        Reviewed by Michael Saboff.

        * runtime/JSDataView.cpp:
        (JSC::JSDataView::defineOwnProperty):

2018-08-31  Mark Lam  <mark.lam@apple.com>

        Add missing exception check in arrayProtoFuncLastIndexOf().
        https://bugs.webkit.org/show_bug.cgi?id=189184
        <rdar://problem/39785959>

        Reviewed by Yusuke Suzuki.

        * runtime/ArrayPrototype.cpp:
        (JSC::arrayProtoFuncLastIndexOf):

2018-08-31  Saam barati  <sbarati@apple.com>

        convertToRegExpMatchFastGlobal must use KnownString as the child use kind
        https://bugs.webkit.org/show_bug.cgi?id=189173
        <rdar://problem/43501645>

        Reviewed by Michael Saboff.

        We were crashing during validation because mayExit returned true
        at a point in the program when we weren't allowed to exit.
        
        The issue was is in StrengthReduction: we end up emitting code that
        had a StringUse on an edge after a node that did side effects and before
        an ExitOK/bytecode number transition. However, StrenghReduction did the
        right thing here and also emitted the type checks before the node with
        side effects. It just did bad bookkeeping. The node we convert to needs
        to use KnownStringUse instead of StringUse for the child edge.

        * dfg/DFGNode.cpp:
        (JSC::DFG::Node::convertToRegExpExecNonGlobalOrStickyWithoutChecks):
        (JSC::DFG::Node::convertToRegExpMatchFastGlobalWithoutChecks):
        (JSC::DFG::Node::convertToRegExpExecNonGlobalOrSticky): Deleted.
        (JSC::DFG::Node::convertToRegExpMatchFastGlobal): Deleted.
        * dfg/DFGNode.h:
        * dfg/DFGStrengthReductionPhase.cpp:
        (JSC::DFG::StrengthReductionPhase::handleNode):
